--- a/src/content/rambling/sae.mdx
+++ b/src/content/rambling/sae.mdx
@@ -283,7 +283,7 @@ I tried steering the generation using both CLIP SAE features and FLUX SAE featur
     <div className="p-2">
         ![steering](./images/sae/steering.png)
     </div>
-    Steering results using CLIP SAE features
+    Steering results using FLUX SAE features
 </div>
 
 This result was a bit unexpected since [Gytis](https://www.lesswrong.com/posts/Quqekpvx8BGMMcaem/interpreting-and-steering-features-in-images) had previously shown that steering works well with CLIP SAEs on Kandinsky 2.2 models.
