--- a/src/content/rambling/sae.mdx
+++ b/src/content/rambling/sae.mdx
@@ -2,7 +2,7 @@
 title: "Gazing in the Latent Space with Sparse Autoencoders"
 description: "Decoming the latent space"
 pubDate: "October 28, 2024"
-heroImage: "./images/sae/sae.png"
+heroImage: "./images/sae/globe.png"
 ---
 
 
@@ -11,10 +11,8 @@ heroImage: "./images/sae/sae.png"
     <div className="p-2">
         ![Gazing](./images/sae/gazing.png)
     </div>
-    You can access 🔗 [fluxlens here](https://fluxlens.vercel.app) to explore the features of Sparse Autoencoders.
+    You can access [fluxlens](https://fluxlens.vercel.app) to explore the features of Sparse Autoencoders.
 </div>
-
-<span className="text-sm opacity-80">Note: This is a long-term ongoing research project I will be updating as I make progress. I plan to open source my SAE training code and weights in the coming weeks. I welcome any feedback, suggestions, or collaboration. Please reach out!</span>
 
 ## Preface
 
@@ -197,8 +195,7 @@ The points are rendered using nomic's open source `deepscatter` engine. I use `c
     <div className="p-2">
         ![cc3m](./images/sae/cc3m.png)
     </div>
-    <span className="text-xl font-semibold">CC3M dataset visualisation.</span>
-    <p>Click to explore 🔗 [fluxlens](https://fluxlens.vercel.app)</p>
+    <span className="text-xl font-semibold">[CC3M dataset visualisation](https://fluxlens.vercel.app)</span>
 </div>
 
 ## Interesting defects in CC3M dataset
