--- a/src/content/rambling/mathfav.mdx
+++ b/src/content/rambling/mathfav.mdx
@@ -49,6 +49,13 @@ The proof of this theorem is very precise and constructive. As professor Geba wo
 The core idea of the proof is to leverage the fact that a conditionally convergent series contains both positive and negative terms. (Can you see why?)
 By rearranging postive / negative terms, you can control the sum to converge to an arbitary value.
 
+<div className="center my-12">
+	<div className="w-2/3 p-2">![Mathfav](./images/mathfav/riemann.png)</div>
+	<span className="w-1/2 text-center text-sm opacity-80">
+		You can rearrange the terms to converge to any sum you want.
+	</span>
+</div>
+
 It's one of the few theorems that's not only surprising, but makes you question why did Riemann even thought about proving this theorem in the first place.
 For a layman, you'd assume that even in the infinite case, the sums of the series are fixed no matter how you rearrange the terms.
 Riemann's rearrangement theorem along with Stone-Weierstrass theorem were one of the first cherries on top for my early analysis classes.
@@ -118,7 +125,88 @@ Addition and scalar multiplication are defined similarly as in the previous exam
 
 The first example starts in a very familiar setting of $\mathbb{R}^n$. Then, it starts to ramp up the abstraction by going from $\mathbb{R}^n$ to a space of linear transformations.
 The third and fourth examples provide a good bridge between linear algebra and functional analysis. When we often think of vectors, a space of functions and polynomials are not the first examples that come to mind.
-While these examples are not impressive on its own, but they help us break the misconception that vectors are these pointy things in $\mathbb{R}^n$. As usual, [3b1b](https://www.youtube.com/watch?v=TgKwz5Ikpc8) has a gentle introduction on how we can think of functions and polynomials as vectors.
+While these examples are not impressive on its own, but they help us break the misconception that vectors are these pointy things in $\mathbb{R}^n$. 
+Here's an example that can be quite illuminating. Consider the vector space of polynomials of degree at most $3$.
+
+$$
+\mathbb{R}_3[x] = \{ a_0 + a_1 x + a_2 x^2 + a_3 x^3 \mid a_i \in \mathbb{R} \}
+$$
+
+An example of a polynomial in this space would be $1 + 2x + 3x^2$, $5x^3 - 2x^2 + 1$, etc. Since $\mathbb{R}_3[x]$ is a vector space, it admits a basis. A natural basis to consider is the set of monomials $\{1, x, x^2, x^3\}$.
+It's simply a fancy way of saying that we can write any polynomial in $\mathbb{R}_3[x]$ as a linear combination of the monomials. For instance,
+
+$$
+1 + 2x + 3x^2 = 1 \cdot 1 + 2 \cdot x + 3 \cdot x^2
+$$
+
+One common operation you can do with polynomials is differentiation. For instance,
+
+$$
+\frac{d}{dx}(1 + 2x + 3x^2) = 2 + 6x
+$$
+
+We also know that differentiation is a **linear** transformation since it satisfies the following properties:
+
+$$
+\frac{d}{dx}(f(x) + g(x)) = \frac{d}{dx}(f(x)) + \frac{d}{dx}(g(x))
+$$
+
+$$
+\frac{d}{dx}(c \cdot f(x)) = c \cdot \frac{d}{dx}(f(x))
+$$
+
+where $c$ is a scalar.
+
+What's great about viewing polynomials as vectors (in an abstract sense) is that we can express differentiation as a linear transformation.
+
+$$
+\frac{d}{dx}: \mathbb{R}_3[x] \to \mathbb{R}_2[x]
+$$
+
+Even better, we can represent all of these transformations as matrices. For instance, the differentiation matrix is given by
+
+$$
+\frac{d}{dx} = \begin{pmatrix}
+0 & 1 & 0 & 0 \\
+0 & 0 & 2 & 0 \\
+0 & 0 & 0 & 3 \\
+\end{pmatrix}
+$$
+
+Taking the example of $1 + 2x + 3x^2$, we can write it as a vector
+
+$$
+\begin{pmatrix}
+1 \\
+2 \\
+3 \\
+0 \\
+\end{pmatrix}
+$$
+
+Applying the differentiation matrix to this vector, we get
+
+$$
+\begin{pmatrix}
+0 & 1 & 0 & 0 \\
+0 & 0 & 2 & 0 \\
+0 & 0 & 0 & 3 \\
+\end{pmatrix} \begin{pmatrix}
+1 \\
+2 \\
+3 \\
+0 \\
+\end{pmatrix} = \begin{pmatrix}
+2 \\
+6 \\
+0 \\
+\end{pmatrix}
+$$
+
+which is exactly the derivative of the polynomial. What I think is quite amazing is that linear algebra tells us that if we have **any linear transformation** between finite dimentional vector spaces, we can represent it as a matrix.
+You can take any abstract linear transformation and represent it as a matrix. You can use the matrix to compute its eigenvalues, eigenvectors, rank, nullity, determinant, etc. to get very concrete information about the linear transformation.
+
+As usual, [3b1b](https://www.youtube.com/watch?v=TgKwz5Ikpc8) has a gentle introduction on how we can think of functions and polynomials as vectors.
 I should also note that operating at a higher level of abstraction also leads us to a Fourier series where you can view cosine and sine functions as an orthonormal basis of functions. Gilbert Strang has a short lecture on this topic [here](https://www.youtube.com/watch?v=vA9dfINW4Rg).
 
 ## Topology proof for Brouwer's fixed point theorem
@@ -155,14 +243,14 @@ Let $X$ be a topological space. Two continuous functions $f, g: X \to Y$ are cal
 
 <div className="center my-12">
 	<div className="center flex flex-row gap-4">
-		<div className="w-1/3 p-2">![Mathfav](./images/mathfav/homotopy.gif)</div>
-		<div className="w-1/3 p-2">![Mathfav](./images/mathfav/loops.png)</div>
+		<div className="w-2/3 p-2">![Mathfav](./images/mathfav/homotopy.gif)</div>
 	</div>
 	<span className="w-1/2 text-center text-sm opacity-80">
 		Homotopy is a fancy way of saying that one path can be continuously deformed into another path.
 	</span>
 </div>
 
+All that abstract nonsense above is to say that there's a way of continously deforming one path into another path.
 Hence, it's natural to consider that two paths / loops that are homotopic are "the same" in some sense. In fact, one can check that homotopy is a valid equivalence relation.
 Now that we've defined what it means for two objects to be "the same", now we can define how the objects can "interact" with each other.
 
@@ -178,13 +266,14 @@ Let $X$ be a topological space. The fundamental group of $X$, denoted by $\pi_1(
 To make this example more concrete, let's consider an unit ball $B^2$ in $\mathbb{R}^2$.
 
 <div className="center my-12">
-	<div className="w-1/3 p-2">![Mathfav](./images/mathfav/circle.png)</div>
+	<div className="w-2/3 p-2">![Mathfav](./images/mathfav/circle.png)</div>
 	<span className="w-1/2 text-center text-sm opacity-80">
-		Loops on a unit ball can be all retracted to a point. For instance, the blue loop could be retracted to a single point by
+		Loops on an unit ball can be all retracted to a point. For instance, the blue loop could be retracted to a single point by
 		slowly shrinking it.
 	</span>
 </div>
 
+Given any closed loop on the unit ball, it's easy to see that one can continuously deform it to a point. Therefore, any (concatenation of) loops on the unit ball can be continuously deformed to a point.
 Therefore, the fundamental group of $B^2$ is trivial. That is to say, there's only "one" kind of loop on the unit ball.
 
 Let's take an example of a circle $S^1$.
@@ -237,7 +326,77 @@ After all, mathematics is all about...
 
 **3.** Defining and studying interactions and maps between these objects.
 
+## Forward Backward Induction proof for AM-GM inequality
+
+<span className="text-sm opacity-80">Taught by Alex Iosevich</span>
+
+The AM-GM inequality states that for any non-negative real numbers $a_1, a_2, \cdots, a_n$,
+
+$$
+\frac{a_1 + a_2 + \cdots + a_n}{n} \geq \sqrt[n]{a_1 a_2 \cdots a_n}
+$$
+
+For $n = 2$, the inequality is equivalent to
+
+$$
+\begin{aligned}
+\frac{a_1 + a_2}{2} &\geq \sqrt{a_1 a_2} \\
+\frac{a_1^2 + 2a_1 a_2 + a_2^2}{4} &\geq a_1 a_2 \\
+a_1^2 + 2a_1 a_2 + a_2^2 &\geq 4a_1 a_2 \\
+(a_1 - a_2)^2 &\geq 0
+\end{aligned}
+$$
+
+Now, we can apply induction, but in powers of $2$. Suppose that the inequality holds for $n = 2^k$. Then,
+
+$$
+\begin{aligned}
+\frac{a_1 + a_2 + \cdots + a_{2^{k+1}}}{2^{k+1}} &\geq \sqrt[2^{k+1}]{a_1 a_2 \cdots a_{2^{k+1}}} \\
+\frac{\frac{a_1 + a_2 + \cdots + a_{2^k}}{2^k} + \frac{a_{2^k+1} + a_{2^k+2} + \cdots + a_{2^{k+1}}}{2^k}}{2} &\geq \sqrt[2^{k+1}]{a_1 a_2 \cdots a_{2^k} a_{2^k+1} a_{2^k+2} \cdots a_{2^{k+1}}} \\
+\frac{\frac{a_1 + a_2 + \cdots + a_{2^k}}{2^k} + \frac{a_{2^k+1} + a_{2^k+2} + \cdots + a_{2^{k+1}}}{2^k}}{2} &\geq \sqrt{\sqrt[2^k]{a_1 a_2 \cdots a_{2^k}} \sqrt[2^k]{a_{2^k+1} a_{2^k+2} \cdots a_{2^{k+1}}}} \\
+\end{aligned}
+$$
+
+What have we shown? We have shown that the inequality holds for $n = 2^{k+1}$ if it holds for $n = 2^k$. We know that it holds for $n = 2$ (base case).
+Therefore, by induction, the inequality holds for all $n = 2^k$ for all $k \in \mathbb{N}$. But, what about other values of $n$? This is where the backward induction comes in.
+
+Suppose that the inequality holds for $n$, let $\frac{a_1 + a_2 + \cdots + a_{n-1}}{n-1} = A$. Then,
+
+$$
+\frac{a_1 + a_2 + \cdots + a_{n-1} + A}{n} = A
+$$
+
+You can check the algebra yourself, but a simpler way to see above is that $A$ is the average of $a_1, a_2, \cdots, a_{n-1}$ and adding an average
+doesn't change the mean. By hypothesis, we have
+
+$$
+\frac{a_1 + a_2 + \cdots + a_{n-1} + A}{n} = A \geq \sqrt[n]{a_1 a_2 \cdots a_{n-1} A}
+$$
+
+which is equivalent to
+
+$$
+\begin{aligned}
+A^{n-1} &\geq a_1 a_2 \cdots a_{n-1} \\
+A &\geq \sqrt[n-1]{a_1 a_2 \cdots a_{n-1}} \\
+\frac{a_1 + a_2 + \cdots + a_{n-1}}{n-1} &\geq \sqrt[n-1]{a_1 a_2 \cdots a_{n-1}}
+\end{aligned}
+$$
+
+which completes the proof $\blacksquare$.
+
+<div className="center my-12">
+	<div className="w-2/3 p-2">![Mathfav](./images/mathfav/amgm.png)</div>
+	<span className="w-1/2 text-center text-sm opacity-80">
+		Quick illustration of forward backward induction proof.
+	</span>
+</div>
+
+Like any things in analysis, this proof is attributed to Cauchy. It's a good illustration of how creative you can be with induction.
+
 ## POWER series are POWERful
+
+<span className="text-sm opacity-80">Taught by Dan Geba</span>
 
 Yes, pun was intended.
 Power series are objects that are almost too good to be true. I would like to illustrate its power by showing how you can use the power series to extend the definition of exponential.
@@ -250,7 +409,10 @@ $$
 Then, we are sneakly told that the graph of $e^x$ looks like this:
 
 <div className="center my-12">
-	<div className="p-2">![Mathfav](./images/mathfav/exp.png)</div>
+	<div className="p-2 w-2/3">![Mathfav](./images/mathfav/exp.png)</div>
+	<span className="w-1/2 text-center text-sm opacity-80">
+		Graph of $e^x$. We know what $e^n$ should be, but how do we define $e^x$ for non-integer values of $x$?
+	</span>
 </div>
 
 The values at integer points makes sense, they're well-defined since we know what it means to multiply a number by itself a certain number of times.
@@ -284,3 +446,82 @@ Last but not the least, I would like to mention the infinite golden balls theore
 > A solid ball can be split into finitely many pieces and rearranged into two solid balls of the same size as the original one.
 
 However, I like calling this theorem as the infinite golden balls theorem in honor of professor Mueller's sense of humor.
+Yes, you have not read it wrong. This theorem suggests that you can take a solid ball and rearrange it into two balls of the same size as the original one.
+
+<div className="center my-12">
+	<div className="w-2/3 p-2">![Mathfav](./images/mathfav/banach.png)</div>
+	<span className="w-1/2 text-center text-sm opacity-80">
+		You can split a solid ball into finitely many pieces and rearrange it into two solid balls of the same size as the original one.
+	</span>
+</div>
+
+I believe that the best explanation for this theorem is one covered by [VSauce](https://www.youtube.com/watch?v=s86-Z-CbaHA) which I watched a while back.
+This paradox also serves as an excellent example of why we care about measure theory, which is a branch of mathematics that deals with "size" of sets.
+
+## Many many other interesting theorems
+
+There are other interesting theorems and proofs that I did not cover here. A few of them are listed below.
+
+### Many proofs of fundamental theorem of algebra
+Not necessarily because the result is important, but because this theorem has many proofs ranging from complex analysis, topology, and abstract algebra.
+Also, fundemental theorem of algebra is one of the "facts" that are often brushed under the rug in high school mathematics.
+
+### Generalised Stokes' theorem
+Ironically, I learned the generalised Stokes' theorem before learning... the regular Stokes' theorem. (We used Spivak's Calculus on Manifolds, which is not a very kind book to learn from. I still think his grey calculus book is his best work.)
+Generalised Stokes' theorem unifies Green's theorem, divergence theorem, and Stoke's theorem into a simple statement.
+
+$$
+\int_S d\omega = \int_{\partial S} \omega
+$$
+
+Generalised Stokes' theorem is an example where the result and the proof is "simple" once you set up the right set of abstractions.
+Most of Spivak's book is spent on setting up differential forms, wedge product, and exterior derivative. Once these are set up, the proof itself is quite minimalistic.
+
+### All cows are black
+
+Did you know that [all cows are black](https://en.wikipedia.org/wiki/All_horses_are_the_same_color)?
+
+### Many ways of integrating a function
+
+- Darboux Integral
+- Riemann Integral
+- Riemann-Stieltjes Integral
+- Lebesgue Integral
+
+These are the four most common ways of integrating a function, of which the first two are actually equivalent. Lebesgue integral ends up being the most general one and covers cases that the other three cannot.
+
+### Vacous truth
+
+I've always found vacous truth to be quite amusing. The statement "All cats in this room are black" is vacous because there are no cats in this room.
+Nonetheless, it is a true statement.
+
+### Mathematicians do not know how to name things
+
+While taking my topology class, I learned that mathematicians do not know how to name things.
+The canonical example is "open" and "closed" sets. A set can be both open and closed, which we call a "clopen" set (I know, I know).
+If a set is NOT open, it doesn't imply that it's closed, and vice versa.
+
+Furthermore, we have a hierachy of topological spaces based on how "separable" the subsets of that topological space are.
+For instance, $T_2$ is called a Hausdorff space, which is a space where any two distinct points can be separated by disjoint open sets.
+
+<div className="center my-12">
+	<div className="w-2/3 p-2">![Mathfav](./images/mathfav/hausdorff.png)</div>
+	<span className="w-1/2 text-center text-sm opacity-80">
+		Hausdorff space allows us to separate any two distinct points by disjoint open sets.
+	</span>
+</div>
+
+One might expect that we would have $T_1, T_2, T_3, \cdots$... but we don't.
+
+<div className="center my-12">
+	<div className="w-2/3 p-2">![Mathfav](./images/mathfav/kolmogorov.png)</div>
+	<span className="w-1/2 text-center text-sm opacity-80">
+		Kolmogorov Classification of topological spaces. The more "separable" the space is, the higher the number.
+	</span>
+</div>
+
+### $\epsilon$, $\delta$ proofs
+
+$\epsilon$, $\delta$ proofs, and field axioms were one of the first "rigorous" introduction to analysis, and maybe the first time you see a rigorous proof in your first analysis class.
+For a highschool student who's dissatisfied with the "black magic" treatment of limits in calculus, $\epsilon$, $\delta$ proofs served me as a good illustration of how you can set up the right abstraction to rigorously "prove" mathematical statements without relying on graphics and hand waving alone.
+I thank Professor Haessig for introducing me to $\epsilon$, $\delta$, and in large, encouraging me to do more mathematics during my undergraduate years.
